# MY-AI

./: .gitignore  README.md  TECHNICAL_DOC.md  config.example.json  config__20dfb3d0-c75b-48c7-a226-88403b6822ca.seb  conversation_db.py  data_collection.py  index.html  last_err.txt  list_voices.py  main.js  mizune-run.py  mizune_conversations.db  package-lock.json  package.json  register_master.py  renderer.js  requirements.txt  run_commands.md  server.py  server_debug_ascii.txt  settings.html  start.bat  style.css  temp_front.txt  temp_log.txt  temp_log2.txt  temp_renderer.txt  temp_server.txt  temp_wakes.txt  test_all_agents.py  test_crash.py  test_mic.py  test_mizune_gitlab.py  train_from_photos.py  vite.config.js
agents/: __init__.py  action_executor_agent.py  base_agent.py  camera_agent.py  intent_classifier.py  manager_agent.py  memory_agent.py  system_agent.py  task_planner_agent.py  vision_perception_agent.py  web_agent.py
core/: __init__.py  actions.py  audio.py  config.py  emotion.py  llm_service.py  ws_handler.py
learning/: engine.py
obsidian/: client.py
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
tests/: e2e_browser_config.json  e2e_browser_tests.py  hard_vision_cases.py  test_code_review_agent.py  test_core_modules.py  test_data_analysis_agent.py  test_file_organizer_agent.py  test_integration.py  test_learning_engine.py  test_obsidian_agent.py  test_obsidian_client.py  test_obsidian_config.py  test_project_manager_agent.py  test_research_agent.py  test_workflow_engine.py
training/: README.md  (+4 more)
(+13 files in other folders)
